<resources>
    <string name="app_name">Bitcoin Node</string>

    <string name="activity_main_start_service_button">GO!</string>
    <string name="activity_main_status_find_seeds_start">Yus boet, we need to find seed peers to\nhelp us connect to the network...</string>
    <string name="activity_main_status_find_seeds_complete">Yoh, we found {:value} other peers from the seeds!</string>
    <string name="activity_main_status_connect_to_peer">Trying to connect to a china here\n{:value}</string>
    <string name="activity_main_drawer_open">Drawer Open</string>
    <string name="activity_main_drawer_close">Drawer Closed</string>
    <string name="activity_main_drawer_item_map">Map</string>
    <string name="activity_main_drawer_item_about">About</string>

    <string name="drawer_header_status_on">ON</string>
    <string name="drawer_header_status_off">OFF</string>
    <string name="drawer_header_status">Status: {:value}</string>
    <string name="drawer_header_connected_peers">Connected Peers: {:value}</string>

    <string name="listitem_peer_status">{:country}, {:city}</string>

    <string name="error_cant_find_peers">Can\'t find peers</string>
    <string name="error_peer_not_found">Peer not found</string>
    <string name="error_no_location">Your location is turned off. Would you like to turn it on?</string>
    <string name="error_no_internet">You\'re not connected to the internet.</string>

    <string name="activity_chat_message_neutral_connecting">Connecting</string>
    <string name="activity_chat_message_neutral_connected">Connected</string>
    <string name="activity_chat_message_neutral_connection_failed">Connection error</string>

    <string name="activity_about_version_tv">Version: {:version}</string>
    <string name="activity_about_header_about_tv">About</string>
    <string name="activity_about_paragraph_about_tv">This app is an implementation of the Bitcoin protocol and it is released under the terms of the MIT license. \n\nYou can find the source code to the application here:\ngithub.com/boetchain/android-bitcoin-node</string>
    <string name="activity_about_header_contributors_tv">Contributors</string>
    <string name="activity_about_name_contributor_tyler_tv">Tyler Hogarth</string>
    <string name="activity_about_detail_contributor_tyler_tv">github.com/tylerhogarth</string>
    <string name="activity_about_name_contributor_ross_tv">Ross Badenhorst</string>
    <string name="activity_about_detail_contributor_ross_tv">github.com/rossbadenhorst</string>
    <string name="activity_about_header_thanks_tv">Thanks</string>
    <string name="activity_about_paragraph_tv_thanks_tv">A lot of this project is based on code from the projects below, with out them none of this would be possible:\n\nBitcoin Core\nBitcoinj\nABcore</string>

    <string name="notification_sticky_peer_service_title">BoetChain Node Running</string>
    <string name="notification_sticky_peer_service_tag">The Node is lank running boet.</string>
    <string name="title_activity_map">Peers</string>

</resources>
